--- a/demo/react/app/index.html
+++ b/demo/react/app/index.html
@@ -4,8 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, height=device-height" />
   <title>css-ns react-demo</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <div id="container"></div>
   <script src="index.js"></script>
 </body>
 </html>
