Split the demo app into multiple components, and include an icon font.

--- a/demo/react/app/index.html
+++ b/demo/react/app/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, height=device-height" />
   <title>css-ns react-demo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
