Implement a dummy demo app into "vanilla".

--- a/demo/vanilla/app/index.html
+++ b/demo/vanilla/app/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, height=device-height" />
   <title>css-ns vanilla-demo</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
+  <style>
+    body {
+      padding: 20px;
+    }
+  </style>
 </head>
 <body>
   <script src="index.js"></script>
