First stab of working with the "vanilla" demo as well.
Other than bundling the entirety of React into a build, works peachy.

--- a/demo/vanilla/app/index.html
+++ b/demo/vanilla/app/index.html
@@ -9,6 +9,12 @@
     body {
       padding: 20px;
     }
+    .MyApp-even {
+      color: blue;
+    }
+    .MyApp-odd {
+      color: red;
+    }
   </style>
 </head>
 <body>
